@@ -5,8 +5,9 @@ CHANGES
 0.10 (unreleased)
 -----------------
 
-- Nothing changed yet.
-
+- Exception views do not by default provide ISystemErrorView anymore as it
+  would result in duplicate log output. The mixin class still exists for
+  writing custom error views that do provide ISystemErrorView.
 
 0.9 (2011-01-20)
 ----------------
